# clik

./: Cargo.toml  LICENSE  README.md
clik_codegen/: Cargo.toml  README.md
clik_codegen/docs/: clik_command.md
clik_codegen/src/: arg.rs  attr.rs  lib.rs
src/: cli.rs  command.rs  error.rs  lib.rs  prelude.rs
