[package]
name = "clik"
version = "0.1.0"
edition = "2021"
description = "A simple-to-use interactive CLI framework"
readme = "README.md"
repository = "https://github.com/maxkofler/clik"
license = "MIT"
keywords = ["cli", "interactive"]
include = ["/src/**.rs", "/README.md", "/LICENSE"]

[features]
async = ["dep:async-recursion"]

[dependencies]
async-recursion = { version = "1.0.5", optional = true }

[dev-dependencies]
rustyline = "12.0.0"
