[package]
name = "clik"
version = "0.1.3"
edition = "2021"
description = "A simple-to-use interactive CLI framework"
readme = "README.md"
repository = "https://github.com/maxkofler/clik"
license = "MIT"
keywords = ["cli", "interactive"]
include = ["/src/**.rs", "/README.md", "/LICENSE", "/build.rs"]

[features]
async = ["dep:async-recursion"]

[dependencies]
async-recursion = { version = "1.0.5", optional = true }

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
rustyline = "12.0.0"

[package.metadata.docs.rs]
features = ["async"]
