[package]
name = "clik"
version = "0.2.0"
edition = "2021"
description = "A simple-to-use interactive CLI framework"
readme = "README.md"
repository = "https://github.com/maxkofler/clik"
license = "MIT"
keywords = ["cli", "interactive"]
include = ["/src/**.rs", "/README.md", "/LICENSE", "/build.rs"]

[features]
async = ["dep:async-recursion"]

[dependencies]
async-recursion = { version = "1.0.5", optional = true }
clik_codegen = "0.1.0"

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
rustyline = "12.0.0"

[package.metadata.docs.rs]
features = ["async"]
