[package]
name = "clik_codegen"
version = "0.1.0"
edition = "2021"
description = "Codegen for the clik crate"
readme = "README.md"
repository = "https://github.com/maxkofler/clik"
license = "MIT"
keywords = ["cli", "interactive", "codegen", "framework"]
include = ["/src/**.rs", "/README.md", "../LICENSE", "/docs"]

[lib]
doctest = false
proc-macro = true

[dependencies]
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.69"
